--- a/modules/commission_insurance/locale/fr_FR.po
+++ b/modules/commission_insurance/locale/fr_FR.po
@@ -252,6 +252,10 @@ msgctxt "field:contract,broker_party:"
 msgid "Broker Party"
 msgstr "Tiers du courtier"
 
+msgctxt "field:contract,show_premium:"
+msgid "Show Premium"
+msgstr "Visualiser les primes"
+
 msgctxt "field:party.party,agents:"
 msgid "Agents"
 msgstr "Protocoles de commissionnement"
