--- a/modules/commission_prepayment_rule_engine/locale/fr_FR.po
+++ b/modules/commission_prepayment_rule_engine/locale/fr_FR.po
@@ -1,32 +1,18 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "error:commission.plan.prepayment.payment_rule:"
-msgid "Can't find configuration for code %s"
-msgstr ""
-
-msgctxt "error:commission.plan.prepayment.payment_rule:"
-msgid "Cannot import : no object %s with functional key: \"%s\" were found."
-msgstr ""
-"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
-"\"%s\"."
-
-msgctxt "error:commission.plan.prepayment.payment_rule:"
-msgid ""
-"Cannot import : the following objects:\n"
-"%s\n"
-"share the same functional key:\n"
-"\"%s\"."
-msgstr ""
-"Impossible d'importer : Les objets suivants :\n"
-"%s\n"
-"partagent la même clé fonctionnelle :\n"
-"\"%s\"."
-
-msgctxt "error:commission.plan.prepayment.payment_rule:"
 msgid "The code must be unique!"
 msgstr "Le code doit être unique !"
+
+msgctxt "error:commission.plan:"
+msgid ""
+"Prepayment payment rule result %s is not matching the expected format [(date, "
+"percentage)]"
+msgstr ""
+"Le résultat de la règle d'échéancier de versement du précompte ne correspond"
+" pas au format attendu [(date, pourcentage)]"
 
 msgctxt "field:commission.plan,prepayment_payment_rule:"
 msgid "Payment Date Rule for Prepayment"
