--- a/modules/debug/locale/fr_FR.po
+++ b/modules/debug/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -41,6 +41,10 @@ msgstr "Nom du modèle"
 msgctxt "field:ir.model.debug.model_info,must_raise_exception:"
 msgid "Must Raise Exception"
 msgstr "Doit lever une exception"
+
+msgctxt "field:ir.model.debug.model_info,previous_runs:"
+msgid "Previous runs"
+msgstr "Exécutions précédentes"
 
 msgctxt "field:ir.model.debug.model_info,to_evaluate:"
 msgid "To Evaluate"
