--- a/modules/endorsement_insurance/locale/fr_FR.po
+++ b/modules/endorsement_insurance/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -9,6 +9,20 @@ msgid ""
 msgstr ""
 "Toutes les options d'un élément couvert doivent être supprimées si une "
 "garantie obligatoire est supprimée"
+
+msgctxt "error:contract.covered_element.option.remove:"
+msgid "You are setting an end date anterior to start date for option : \"%s\""
+msgstr ""
+"Vous définissez une date de fin antérieure à la date de début de l'option : "
+"\"%s\""
+
+msgctxt "error:contract.covered_element.option.remove:"
+msgid ""
+"You cannot remove all options on all covered elements of a contract. You may"
+" want to end the contract instead."
+msgstr ""
+"Vous ne pouvez pas enlever toutes les options de tous les éléments couverts "
+"du contrat. Vous devez résilier le contrat."
 
 msgctxt "error:endorsement.contract.covered_element.option:"
 msgid "Extra Premium Modification"
@@ -213,6 +227,10 @@ msgctxt ""
 "field:contract.covered_element.option.remove.option_selector,to_remove:"
 msgid "To Remove"
 msgstr "A résilier"
+
+msgctxt "field:endorsement,application_date_str:"
+msgid "Application Date"
+msgstr "Date d'application"
 
 msgctxt "field:endorsement.contract,covered_elements:"
 msgid "Covered Elements"
